k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bigdata
  labels:
    app.kubernetes.io/part-of: lambda-architecture
